[package]
name = "xsus"
version = "0.1.2"
authors = ["Maini Lotfi <mainilotfi@gmail.com>"]
edition = "2024"
description = "A simple and fast web tool for Rust made with zero outside libraries."
license = "MIT"
homepage = "https://github.com/phantekzy/xsus"
repository = "https://github.com/phantekzy/xsus"
documentation = "https://docs.rs/xsus"
readme = "README.md"
keywords = ["http-client", "native", "systems", "low-level", "minimalist"]
categories = ["network-programming", "no-std", "web-programming"]

[badges]
maintenance = { status = "actively-developed" }
